# esp32-c6-i2c-test

./: Cargo.toml
src/: main.rs
